--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "GPL-2.0-only"
 publish = true
 readme = "README.md"
 repository = "https://github.com/novafacing/qemu-rs"
-version = "8.2.2-v0"
+version = "9.0.0-v0"
 
 [workspace]
 resolver = "2"
@@ -23,6 +23,6 @@ members = [
 default-members = ["qemu-plugin", "qemu-plugin-sys"]
 
 [workspace.dependencies]
-qemu-plugin-sys = { version = "8.2.2-v0", path = "qemu-plugin-sys" }
-qemu-plugin = { version = "8.2.2-v0", path = "qemu-plugin" }
-qemu = { version = "8.2.2-v0", path = "qemu" }
+qemu-plugin-sys = { version = "9.0.0-v0", path = "qemu-plugin-sys", default-features = false }
+qemu-plugin = { version = "9.0.0-v0", path = "qemu-plugin", default-features = false }
+qemu = { version = "9.0.0-v0", path = "qemu" }
