--- a/qemu-plugin-sys/Cargo.toml
+++ b/qemu-plugin-sys/Cargo.toml
@@ -12,7 +12,16 @@ repository.workspace = true
 version.workspace = true
 
 [build-dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.86"
 
 [lints.rust]
 non_snake_case = "allow"
+
+[features]
+default = ["plugin-api-v2"]
+# Use the V1 plugin API, which is defined for versions below 9.0.0
+plugin-api-v1 = []
+# Use the V2 plugin API, which is defined for version 9.0.0
+plugin-api-v2 = []
+# Use the V3 plugin API, which is defined for versions above 9.0.0
+plugin-api-v3 = []
