--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -12,10 +12,11 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.86"
 once_cell = "1.19.0"
-qemu-plugin-sys = { version = "8.2.2-v0", workspace = true }
-thiserror = "1.0.51"
+qemu-plugin-sys = { version = "9.0.0-v0", workspace = true, default-features = false }
+thiserror = "1.0.61"
+num-traits = { version = "0.2.19", optional = true }
 
 [target.'cfg(windows)'.dependencies.libloading]
 version = "0.8.3"
@@ -23,7 +24,7 @@ version = "0.8.3"
 version = "1.4"
 
 [target.'cfg(windows)'.dependencies.windows]
-version = "0.52"
+version = "0.56.0"
 features = [
     "Win32_System_WindowsProgramming",
     "Win32_System_LibraryLoader",
@@ -31,8 +32,16 @@ features = [
 ]
 
 [target.'cfg(windows)'.dependencies.libc]
-version = "0.2.152"
+version = "0.2.155"
 
 [features]
+default = ["plugin-api-v2"]
 # Define external symbols with weak definition
 unix-weak-link = []
+# Use the V1 plugin API, which is defined for versions below 9.0.0
+plugin-api-v1 = ["qemu-plugin-sys/plugin-api-v1"]
+# Use the V2 plugin API, which is defined for version 9.0.0
+plugin-api-v2 = ["qemu-plugin-sys/plugin-api-v2"]
+# Use the V2 plugin API, which is defined for versions above 9.0.0
+plugin-api-v3 = ["qemu-plugin-sys/plugin-api-v3"]
+num-traits = ["dep:num-traits"]
