--- a/plugins/tiny/Cargo.toml
+++ b/plugins/tiny/Cargo.toml
@@ -7,7 +7,15 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-qemu-plugin.workspace = true
+qemu-plugin = { workspace = true, features = [
+    "unix-weak-link",
+], default-features = false }
 anyhow = "1.0.75"
 ffi = "0.1.0"
 ctor = "0.2.6"
+
+[features]
+default = ["plugin-api-v2"]
+plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
+plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
+plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
