Do not use pushd and fix versioning for tiny plugin

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,12 @@ jobs:
 
       - name: Build QEMU
         run: |
-          pushd qemu-upstream
+          cd qemu-upstream
           ./configure --enable-plugins
-          pushd build
+          cd build
           make -j$(nproc)
           make install
-          popd
-          popd
+          cd ../..
 
       - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/checkout@v4
