--- a/plugins/tracer/Cargo.toml
+++ b/plugins/tracer/Cargo.toml
@@ -8,30 +8,27 @@ name = "tracer"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-anyhow = "1.0.75"
-ctor = "0.2.6"
+anyhow = "1.0.94"
+ctor = "0.2.9"
 qemu-plugin = { workspace = true, features = [
     "unix-weak-link",
 ], default-features = false }
-serde = { version = "1.0.193", features = ["derive"] }
+serde = { version = "1.0.215", features = ["derive"] }
 serde_cbor = "0.11.2"
-tokio = { version = "1.35.0", features = ["full"] }
-typed-builder = "0.18.0"
-yaxpeax-x86 = "1.2.2"
+tokio = { version = "1.42.0", features = ["full"] }
+typed-builder = "0.20.0"
+yaxpeax-x86 = "2.0.0"
 
 # Dependencies only used by this crate's `tracer` binary. We do not use dev-dependencies
 # because they cannot be optional.
-clap = { version = "4.4.11", features = ["derive", "string"] }
-# Enable the `qemu` feature to build and install QEMU with the `qemu` crate instead
-# of trying to use the system QEMU.
-qemu = { workspace = true, features = ["plugins"], optional = true }
+clap = { version = "4.5.22", features = ["derive", "string"] }
 memfd-exec = { version = "0.2.1", optional = true }
 rand = "0.8.5"
-serde_json = "1.0.108"
+serde_json = "1.0.133"
 
 [features]
-qemu = ["dep:memfd-exec", "dep:qemu"]
-default = ["plugin-api-v2"]
+default = ["plugin-api-v4"]
 plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
 plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
 plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
+plugin-api-v4 = ["qemu-plugin/plugin-api-v4"]
