--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -12,19 +12,19 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-anyhow = "1.0.86"
-once_cell = "1.19.0"
-qemu-plugin-sys = { version = "9.0.0-v0", workspace = true, default-features = false }
-thiserror = "1.0.61"
+anyhow = "1.0.94"
+once_cell = "1.20.2"
+qemu-plugin-sys = { version = "9.1.2-v0", workspace = true, default-features = false }
+thiserror = "2.0.4"
 num-traits = { version = "0.2.19", optional = true }
 
 [target.'cfg(windows)'.dependencies.libloading]
-version = "0.8.3"
+version = "0.8.6"
 [target.'cfg(windows)'.dependencies.lazy_static]
-version = "1.4"
+version = "1.5.0"
 
 [target.'cfg(windows)'.dependencies.windows]
-version = "0.56.0"
+version = "0.58.0"
 features = [
     "Win32_System_WindowsProgramming",
     "Win32_System_LibraryLoader",
@@ -32,16 +32,18 @@ features = [
 ]
 
 [target.'cfg(windows)'.dependencies.libc]
-version = "0.2.155"
+version = "0.2.167"
 
 [features]
-default = ["plugin-api-v2"]
+default = ["plugin-api-v4"]
 # Define external symbols with weak definition
 unix-weak-link = []
 # Use the V1 plugin API, which is defined for versions below 9.0.0
 plugin-api-v1 = ["qemu-plugin-sys/plugin-api-v1"]
 # Use the V2 plugin API, which is defined for version 9.0.0
 plugin-api-v2 = ["qemu-plugin-sys/plugin-api-v2"]
-# Use the V2 plugin API, which is defined for versions above 9.0.0
+# Use the V3 plugin API, which is defined for version 9.1.0
 plugin-api-v3 = ["qemu-plugin-sys/plugin-api-v3"]
+# Use the V4 plugin API, which is defined for versions above 9.1.0
+plugin-api-v4 = ["qemu-plugin-sys/plugin-api-v4"]
 num-traits = ["dep:num-traits"]
