Fix license to match QEMU

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["virtualization", "emulator", "qemu"]
 description = "Rust bindings and binary installers for QEMU"
 edition = "2021"
 homepage = "https://github.com/novafacing/qemu-rs"
-license = "GPL-2.0-only"
+license = "GPL-2.0-or-later"
 publish = true
 readme = "README.md"
 repository = "https://github.com/novafacing/qemu-rs"
