--- a/plugins/tiny-system/Cargo.toml
+++ b/plugins/tiny-system/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-qemu-plugin = { workspace = true, features = [
-    "unix-weak-link",
-], default-features = false }
+qemu-plugin = { workspace = true, default-features = false }
 anyhow = "1.0.94"
 ffi = "0.1.1"
 ctor = "0.2.9"
@@ -20,3 +18,4 @@ plugin-api-v1 = ["qemu-plugin/plugin-api-v1"]
 plugin-api-v2 = ["qemu-plugin/plugin-api-v2"]
 plugin-api-v3 = ["qemu-plugin/plugin-api-v3"]
 plugin-api-v4 = ["qemu-plugin/plugin-api-v4"]
+unix-weak-link = ["qemu-plugin/unix-weak-link"]
