--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,106 @@ jobs:
           qemu-x86_64 -plugin ../../target/release/libtiny.so /bin/ls -lah
           cd ../..
 
+  test_plugins_linux_stable:
+    name: Build and Test Plugins API v${{ matrix.version }} (Linux, stable Rust)
+    runs-on: ubuntu-latest
+    container: ubuntu:24.04
+    strategy:
+      matrix:
+        include:
+          - version: 1
+            commit: fb691b8cbabf5bde7d25a7f720d5ec7d5b1341e1
+          - version: 2
+            commit: fba3b490a26cb278dfa183d7fcc375746e312980
+          - version: 3
+            commit: 7de77d37880d7267a491cb32a1b2232017d1e545
+          - version: 4
+            commit: cfa3a6c54511374e9ccee26d9c38ac1698fc7af2
+    env:
+      QEMU_COMMIT_HASH: ${{ matrix.commit }}
+    steps:
+      - name: Set up Sources List
+        run: |
+          cat <<EOF > /etc/apt/sources.list.d/ubuntu.sources
+          Types: deb
+          URIs: http://archive.ubuntu.com/ubuntu/
+          Suites: noble noble-updates noble-backports
+          Components: main universe restricted multiverse
+          Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
+
+          Types: deb
+          URIs: http://security.ubuntu.com/ubuntu/
+          Suites: noble-security
+          Components: main universe restricted multiverse
+          Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
+
+          Types: deb-src
+          URIs: http://archive.ubuntu.com/ubuntu/
+          Suites: noble noble-updates noble-backports
+          Components: main universe restricted multiverse
+          Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
+
+          Types: deb
+          URIs: http://security.ubuntu.com/ubuntu/
+          Suites: noble-security
+          Components: main universe restricted multiverse
+          Signed-By: /usr/share/keyrings/ubuntu-archive-keyring.gpg
+          EOF
+
+      - name: Install QEMU Build Dependencies
+        run: |
+          apt -y update
+          apt -y install git curl build-essential
+          apt -y source qemu
+          apt -y build-dep qemu
+
+      - name: Cache QEMU
+        id: qemu-cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            qemu-upstream
+          key: ${{ runner.os }}-qemu-v${{ matrix.version }}-${{ matrix.commit }}
+
+      - name: Clone QEMU
+        if: steps.qemu-cache.outputs.cache-hit != 'true'
+        run: |
+          git clone https://gitlab.com/qemu/qemu qemu-upstream
+          cd qemu-upstream
+          git checkout "${QEMU_COMMIT_HASH}"
+
+      - name: Build QEMU
+        if: steps.qemu-cache.outputs.cache-hit != 'true'
+        run: |
+          cd qemu-upstream
+          ./configure --enable-plugins
+          cd build
+          make -j$(nproc)
+          make install
+          cd ../..
+
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: actions/checkout@v4
+
+      - name: Test QEMU Install
+        run: |
+          qemu-x86_64 --help
+
+      - name: Build and Test Tracer
+        run: |
+          cd plugins/tracer
+          cargo build -r --features=plugin-api-v${{ matrix.version }} --no-default-features || exit 0
+          cargo build -r --features=plugin-api-v${{ matrix.version }} --no-default-features
+          cargo run --features=plugin-api-v${{ matrix.version }} --no-default-features -r --bin tracer -- -a /bin/ls -- -lah
+          cd ../..
+
+      - name: Build and Test Tiny
+        run: |
+          cd plugins/tiny
+          cargo build -r --features=plugin-api-v${{ matrix.version }} --no-default-features
+          qemu-x86_64 -plugin ../../target/release/libtiny.so /bin/ls -lah
+          cd ../..
+
   test_plugins_windows:
     name: Build and Test Plugins (Windows)
     runs-on: windows-latest
