Move HRTBs on callbacks to more sensical position
Signed-off-by: Rowan Hart <rowanbhart@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "plugins/tiny",
     "plugins/tiny-system",
     "plugins/tracer",
+    "plugins/icount",
 ]
 default-members = ["qemu-plugin", "qemu-plugin-sys", "qemu-plugin-macro"]
 
