--- a/qemu-plugin-sys/Cargo.toml
+++ b/qemu-plugin-sys/Cargo.toml
@@ -18,7 +18,7 @@ anyhow = "1.0.86"
 non_snake_case = "allow"
 
 [features]
-default = ["plugin-api-v4"]
+default = ["plugin-api-v5"]
 # Use the V1 plugin API, which is defined for versions below 9.0.0
 plugin-api-v1 = []
 # Use the V2 plugin API, which is defined for version 9.0.0
@@ -27,3 +27,5 @@ plugin-api-v2 = []
 plugin-api-v3 = []
 # Use the V4 plugin API, which is defined for versions above 9.2.0
 plugin-api-v4 = []
+# Use the V5 plugin API, which is defined for versions above 10.1.0
+plugin-api-v5 = []
