Update deps and add v0 bindings
Signed-off-by: Rowan Hart <rowanbhart@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
     "rust-analyzer.cargo.buildScripts.enable": false,
+    "rust-analyzer.diagnostics.disabled": [
+        "unlinked-file"
+    ]
 }
