--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -12,27 +12,25 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-anyhow = "1.0.94"
-once_cell = "1.20.2"
-qemu-plugin-sys = { version = "9.2.0-v0", workspace = true, default-features = false }
-thiserror = "2.0.4"
+anyhow = "1.0.99"
+once_cell = "1.21.3"
+qemu-plugin-sys = { version = "9.0.0-v0", workspace = true, default-features = false }
+thiserror = "2.0.16"
 num-traits = { version = "0.2.19", optional = true }
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.58.0", features = [
+windows = { version = "0.61.3", features = [
     "Win32_System_WindowsProgramming",
     "Win32_System_LibraryLoader",
     "Win32_Foundation",
 ] }
 
-libloading = "0.8.6"
+libloading = "0.8.8"
 lazy_static = "1.5.0"
-libc = "0.2.167"
+libc = "0.2.175"
 
 [features]
-default = ["plugin-api-v4"]
-# Define external symbols with weak definition
-unix-weak-link = []
+default = ["plugin-api-v5"]
 # Use the V1 plugin API, which is defined for versions below 9.0.0
 plugin-api-v1 = ["qemu-plugin-sys/plugin-api-v1"]
 # Use the V2 plugin API, which is defined for version 9.0.0
@@ -41,4 +39,6 @@ plugin-api-v2 = ["qemu-plugin-sys/plugin-api-v2"]
 plugin-api-v3 = ["qemu-plugin-sys/plugin-api-v3"]
 # Use the V4 plugin API, which is defined for versions above 9.1.0
 plugin-api-v4 = ["qemu-plugin-sys/plugin-api-v4"]
+# Use the V5 plugin API, which is defined for versions above 10.1.0
+plugin-api-v5 = ["qemu-plugin-sys/plugin-api-v5"]
 num-traits = ["dep:num-traits"]
